--- a/styles/css/vtex.product-summary.css
+++ b/styles/css/vtex.product-summary.css
@@ -1,3 +1,12 @@
-/* .imageNormal{
+.productNameContainer{
+    color: #A70033;
+    -webkit-text-stroke: medium;
+}
 
-} */
+.imageNormal {
+    object-fit: cover !important;
+}
+
+.nameContainer--myCustomSummary {
+    padding: 0;
+}
