--- a/styles/css/vtex.search-result.css
+++ b/styles/css/vtex.search-result.css
@@ -1,38 +1,22 @@
-.gallery{
-    width: 1000px;
-    margin-left: 250px;
-    /* background-color: #f2f2f2; */
-    padding-left: 5px;
-    padding-right: 5px;
-}
-.filters--layout{
-     width: 250px;
-      margin-top: -1950px;
-      margin-right: 200px;
-}
-.filterPopupTitle{
- text-align: left;
- 
-} 
-.galleryTitle--layout{
-    font-size: x-large;
-    text-transform: capitalize;
-    font-family: "Lexend","Inter Tight","Helvetica Neue",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+.galleryLayoutOptionButton {
+  background-color: #F0F0F0;
+  color: #3F3F40;
+  padding: 0.375rem 0.75rem 0.375rem 0.75rem;
 }
 
-.totalProducts--layout{
-    text-align: left;
+.galleryLayoutOptionButton--selected {
+  background-color: #3F3F40;
+  color: #FFFFFF;
 }
 
-.totalProductsMessage{
-    color: black;
+.galleryLayoutSwitcher {
+  border-radius: 4px 4px 4px 4px;
+  justify-content: center;
+  overflow: hidden;
+  width: auto !important;
+  align-self: center
 }
 
-.totalProducts{
-    font-weight: 500;
+.galleryItem--list {
+  border-bottom: 1px #E7E9EE solid;
 }
-
-/* .gallery{
-    margin: auto;
-} */
-
